@startuml UC-108 Replace IT Support Account - Class Diagram
skinparam defaultFontName "Segoe UI"
skinparam shadowing false
skinparam wrapWidth 320
skinparam classBackgroundColor #FFFFFF
skinparam classBorderColor #000000
skinparam ArrowColor #000000
title UC-108 Replace IT Support Account — Class Diagram

class UserManagementContent <<client>> {
  - itStaffReplacementTarget : AccountItem
  - itStaffReplacementEmail : String
  - itStaffReplacementError : String
  - isReplacingItStaff : boolean
  + openItStaffReplacement(item : AccountItem) : void
  + replaceItStaff() : void
}

class ReplaceItStaffRequest <<dto>> {
  + replacementEmail : String
  + fullName : String
}

class ItStaffDto <<dto>> {
  + id : UUID
  + email : String
  + fullName : String
  + status : String
}

class PrincipalController <<controller>> {
  - principalItStaffService : PrincipalItStaffService
  + replaceItStaff(id : UUID, request : ReplaceItStaffRequest) : ItStaffDto
}

class PrincipalItStaffService <<service>> {
  - userRepository : AppUserRepository
  - userRoleRepository : UserRoleRepository
  - refreshTokenRepository : RefreshTokenRepository
  - activityLogService : ActivityLogService
  + replace(id, replacementEmail, fullName) : AppUser
}

interface AppUserRepository {
  + findById(id : UUID) : Optional<AppUser>
  + findByEmail(email : String) : Optional<AppUser>
  + save(user : AppUser) : AppUser
}

class JpaAppUserRepository <<adapter>> {
  - jpa : AppUserJpaRepository
}

interface UserRoleRepository {
  + findRolesByUserId(userId : UUID) : Set<Role>
  + replaceRole(userId, role, grantedBy, grantedAt) : void
  + lockRole(role : Role) : void
}

interface RefreshTokenRepository {
  + revokeAllByUserId(userId : UUID) : void
}

class ActivityLogService <<service>> {
  - repository : ActivityLogRepository
  + record(actorId, actorRole, category, action, targetType, targetId, metadata) : void
}

class AppUser <<entity>> {
  - id : UUID
  - email : String
  - fullName : String
  - status : UserStatus
  + isActiveOrInvited() : boolean
}

enum UserStatus {
  INVITED
  ACTIVE
  DISABLED
}

UserManagementContent ..> PrincipalController : calls API
UserManagementContent ..> ReplaceItStaffRequest : input
PrincipalController ..> ReplaceItStaffRequest : input
PrincipalController ..> ItStaffDto : output
PrincipalController "1" --> "1" PrincipalItStaffService
PrincipalItStaffService "1" --> "1" AppUserRepository
PrincipalItStaffService "1" --> "1" UserRoleRepository
PrincipalItStaffService "1" --> "1" RefreshTokenRepository
PrincipalItStaffService "1" --> "1" ActivityLogService
JpaAppUserRepository ..|> AppUserRepository : implements
AppUserRepository ..> AppUser : output
AppUser "1" --> "1" UserStatus : former IT Support becomes DISABLED

@enduml
